Fix overflow

--- a/src/components/DashboardTable/DashboardTable.module.scss
+++ b/src/components/DashboardTable/DashboardTable.module.scss
@@ -2,14 +2,15 @@
 
 .DashboardTable {
     width: 100%;
+    height: 100%;
+
+    overflow: hidden;
+    position: relative;
 }
 
-.header {
-    position: sticky;
+.tableContainer {
+    height: inherit;
 }
-
-.table_body {
-    overflow: auto;
 
 .tableHeaderCell {
     border-bottom: 1px solid $brown;
